# Chatbot

./: README-DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements.txt
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts
client/src/components/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  Sidebar.tsx
server/: app.py  pyproject.toml  requirements.txt  vercel.json
server/api/: index.py
server/src/graphs/: graph_builder.py
server/src/llms/: groqllm.py
server/src/nodes/: node.py
server/src/tools/: tools.py
src/graphs/: graph_builder.py
src/llms/: groqllm.py
src/nodes/: blog_node.py
src/states/: blog_state.py
src/tools/: tools.py
